# quart-graphql

./: .gitignore  pyproject.toml
.circleci/: config.yml
quart_graphql/: blueprint.py  graphqlview.py  render_graphiql.py
tests/: app.py  schema.py  test_graphiqlview.py  test_graphqlview.py
