[tool.poetry]
name = "quart-graphql"
version = "0.1.0"
description = ""
authors = ["Syrus Akbary, MarkJGx"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
quart = "^0.11.4"
graphql-core = "~2"
graphql-server-core = "~1"


[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
